ecmascript/parser/tests/test262-error-references/fail/6a7197b11e9847ed.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/6a7197b11e9847ed.js:1:12
  |
1 | if (1) let x = 10;
  |            ^

